<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sample News App</string>
    <string name="headline">HEADLINES</string>
    <string name="sample_source">BBC News • 1h</string>
    <string name="sample_title">Why would Putin want to nuke Florida?</string>
    <string name="sample_title_long">PM Narendra Modi\'s frivolous statements won\'t help create wedge between me and Congress: Amarinder Singh</string>
    <string name="sample_description">The Sunshine State is home to Mr Trump\'s golf resort, but bigger targets lie elsewhere in the US.</string>
    <string name="image_desc">Image for the News Post</string>

    <string name="bottom_sheet_option_save">Save for later</string>
    <string name="bottom_sheet_option_share">Share</string>
    <string name="bottom_sheet_option_open_in_browser">Open in browser</string>

    <string name="image_desc_source_image">Source Image</string>
    <string name="sample_category">General</string>

    <string name="message_item_saved">Article added to Saved</string>
    <string name="message_item_removed">Article removed from Saved</string>

</resources>
