<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.praveen.newsapp.utils.BindingUtils" />

        <variable
            name="news"
            type="com.example.praveen.newsapp.models.Article" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp4"
        tools:context=".ui.MainActivity"
        android:layout_marginVertical="@dimen/dp12">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground">

            <ImageView
                android:id="@+id/iv_news_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp200"
                android:contentDescription="@string/image_desc"
                android:src="@color/cardBackground"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                bind:articleUrl="@{news.url}"
                bind:url="@{news.urlToImage}" />

            <TextView
                android:id="@+id/tv_news_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp16"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/roboto_slab_regular"
                android:includeFontPadding="false"
                android:minLines="3"
                android:text="@{news.title}"
                android:textAppearance="@style/AppTheme.Headline.Title"
                android:textColor="@color/txt_color_white"
                android:textSize="@dimen/sp20"
                app:layout_constraintBottom_toBottomOf="@+id/iv_news_image"
                app:layout_constraintEnd_toEndOf="@+id/iv_news_image"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/iv_news_image"
                tools:text="@string/sample_title_long" />

            <TextView
                android:id="@+id/tv_news_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp24"
                android:layout_marginBottom="@dimen/dp12"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@{BindingUtils.getSourceAndTime(news.source.name, news.publishedAt)}"
                android:textColor="@color/txt_smal_color"
                android:textSize="@dimen/sp12"
                app:layout_constraintBottom_toBottomOf="@+id/iv_news_image"
                app:layout_constraintStart_toStartOf="@+id/iv_news_image"
                app:layout_constraintTop_toBottomOf="@id/tv_news_title"
                app:layout_constraintVertical_bias="1.0"
                tools:text="@string/sample_source" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>