<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.example.praveen.newsapp.utils.BindingUtils" />

        <variable
            name="article"
            type="com.example.praveen.newsapp.models.Article" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        tools:context=".ui.DetailActivity">

        <ImageView
            android:id="@+id/iv_news_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_desc"
            android:foreground="@drawable/news_image_gradient"
            bind:articleUrl="@{article.url}"
            bind:layout_constraintBottom_toBottomOf="parent"
            bind:layout_constraintStart_toStartOf="parent"
            bind:layout_constraintTop_toTopOf="parent"
            bind:urlToImage="@{article.urlToImage}" />


        <TextView
            android:id="@+id/tv_news_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_bold"
            android:lineSpacingMultiplier="1.1"
            android:text="@{article.title}"
            android:layout_marginStart="@dimen/dp24"
            android:textColor="@color/txt_color_white"
            android:textSize="@dimen/sp29"
            bind:layout_constraintBottom_toBottomOf="@+id/iv_news_image"
            bind:layout_constraintEnd_toEndOf="@id/guideline_right"
            bind:layout_constraintHorizontal_bias="1.0"
            bind:layout_constraintStart_toStartOf="@id/guideline_left"
            bind:layout_constraintTop_toBottomOf="@+id/toolbar"
            bind:layout_constraintVertical_bias="0.2"
            tools:text="@string/sample_title" />

        <TextView
            android:id="@+id/tv_news_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp4"
            android:layout_marginStart="@dimen/dp24"
            android:layout_marginTop="@dimen/dp64"
            android:text="@{article.source.name}"
            android:fontFamily="@font/roboto_slab_regular"
            android:textSize="@dimen/sp20"
            android:textColor="@color/txt_color_white"
            tools:text="The Washington Post"
            bind:layout_constraintStart_toStartOf="@id/guideline_left"
            bind:layout_constraintTop_toBottomOf="@+id/tv_news_title" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp64"
            android:fontFamily="@font/roboto_slab_regular"
            android:textSize="@dimen/sp20"
            android:textColor="@color/txt_color_white"
            android:text="@{BindingUtils.formatDateForDetails(article.publishedAt)}"
            bind:layout_constraintBottom_toBottomOf="@+id/tv_news_source"
            bind:layout_constraintEnd_toStartOf="@+id/guideline_right"
            bind:layout_constraintHorizontal_bias="0.969"
            bind:layout_constraintStart_toEndOf="@+id/tv_news_source"
            bind:layout_constraintTop_toBottomOf="@+id/tv_news_title"
            bind:layout_constraintVertical_bias="0.0"
            tools:text="@tools:sample/date/ddmmyy" />


        <TextView
            android:id="@+id/tv_news_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24"
            android:layout_marginTop="@dimen/dp16"
            android:lineSpacingMultiplier="1.3"
            android:text="@{article.description}"
            android:textColor="@color/txt_smal_color"
            android:textSize="@dimen/sp14"
            android:fontFamily="@font/roboto_slab_regular"
            bind:layout_constraintEnd_toEndOf="@id/guideline_right"
            bind:layout_constraintStart_toStartOf="@id/guideline_left"
            bind:layout_constraintTop_toBottomOf="@id/tv_news_source"
            tools:layout_editor_absoluteY="365dp"
            tools:text="@string/sample_description" />

        <TextView
            android:id="@+id/tv_news_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="@dimen/dp24"
            android:lineSpacingMultiplier="1.3"
            android:text="@{BindingUtils.truncateExtra(article.content)}"
            android:textColor="@color/txt_smal_color"
            android:textSize="@dimen/sp14"
            android:fontFamily="@font/roboto_slab_regular"
            bind:layout_constraintEnd_toEndOf="@id/guideline_right"
            bind:layout_constraintStart_toStartOf="@id/guideline_left"
            bind:layout_constraintTop_toBottomOf="@id/tv_news_desc"
            tools:text="@string/sample_description" />


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?actionBarItemBackground"
            android:fitsSystemWindows="true"
            bind:layout_constraintEnd_toEndOf="parent"
            bind:layout_constraintStart_toStartOf="parent"
            bind:layout_constraintTop_toTopOf="parent"
            bind:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            bind:layout_constraintGuide_begin="12dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            bind:layout_constraintGuide_end="12dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/bottom_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            bind:barrierDirection="bottom"
            bind:constraint_referenced_ids="tv_news_desc,tv_news_content,tv_news_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>